--- a/do0/do0/Views/Shared/_Layout.cshtml
+++ b/do0/do0/Views/Shared/_Layout.cshtml
@@ -291,7 +291,7 @@
 
     <script>
         $(document).ready(function () {
-            $('#example').DataTable();
+            $('#FrontPagePostTable').DataTable();
         });
     </script>
 
